@@ -1,0 +1,9 @@
+[buildout]
+parts =
+    test
+develop = .
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = mr.developer
+defaults = ['-v', '-c', '-1']
